--- a/DeliTrack.Application/DeliTrack.Application.csproj
+++ b/DeliTrack.Application/DeliTrack.Application.csproj
@@ -1,28 +1,28 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\DeliTrack.Domain\DeliTrack.Domain.csproj" />
+    <Compile Remove="Features\OrderFeatures\GetOrdersByUser\**"/>
+    <EmbeddedResource Remove="Features\OrderFeatures\GetOrdersByUser\**"/>
+    <None Remove="Features\OrderFeatures\GetOrdersByUser\**"/>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="FluentValidation" Version="11.9.0" />
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
-    <PackageReference Include="MediatR" Version="12.2.0" />
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <ProjectReference Include="..\DeliTrack.Domain\DeliTrack.Domain.csproj"/>
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="Features\OrderFeatures\GetOrdersByUser\" />
-    <Folder Include="Features\OrderFeatures\GetPositions\" />
+    <PackageReference Include="AutoMapper" Version="12.0.1"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+    <PackageReference Include="FluentValidation" Version="11.9.0"/>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0"/>
+    <PackageReference Include="MediatR" Version="12.2.0"/>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="Features\OrderFeatures\GetPositions\"/>
+  </ItemGroup>
 </Project>
